                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-11-2005 fixed: My Music Library would highlight the wrong album on previous dir if there were multiple albums of the same name (aka Greatest Hits)
 - 13-11-2005 fixed: My Music could get stuck in the Now Playing window
 - 12-11-2005 fixed: My Movies "Query Info For All Files" now looks for "stackedname.nfo" like "Movie Information"
 - 12-11-2005 fixed: httpapi - called via ASP would include inappropriate web header
 - 12-11-2005 added: Controller Rumble (controller vibration)! [GeminiServer]
                     On menu action controller will Rumble! Rumble On/Off and Rumble sensitivity can set over: Appearance - Look and Feel - Rumble Controller!
 - 12-11-2005 added: rename in Context menu Music/Pictures/Video [GeminiServer]
                     The renameing is in condition with delete function in the context menu! Settings description changed to "Allow File Renaming and Deletion"
 - 09-11-2005 fixed: more gracious handling of a missing alternate subtitle directory.
 - 07-11-2005 changed: new spc codec for paplayer. uses snesapu.dll (same core as snesamp).
 - 07-11-2005 fixed: after lpcm codec addition to dvdplayer, dvd's where not playable anymore.
 - 07-11-2005 fixed: reverted dvdplayer overlay fix (it produced more problems then it fixed)
 - 06-11-2005 added: option in my programs settings to en/disable Kai (disabled by default).
 - 05-11-2005 changed: allmusic.com album lookups now use both album and artist and rank the results
 - 05-11-2005 fixed: the cover image is updated when refreshing album information
 - 05-11-2005 changed: some startup logging cleanup.